# platform-engineer-test

./: .gitignore  README.md
infra-k8s/k8s-apps/argocd/: my-service-app.yaml  nginx-app.yaml  sealed-secrets-app.yaml
infra-k8s/k8s-apps/charts/my-service/: Chart.yaml  values.yaml
infra-k8s/k8s-apps/charts/my-service/templates/: NOTES.txt  deployment.yaml  ingress.yaml  service.yaml
infra-k8s/k8s-apps/charts/nginx/: Chart.yaml  values.yaml
infra-k8s/k8s-apps/charts/nginx/templates/: deployment.yaml
infra-k8s/sealed-secrets/: sealedsecret.yaml
my-service/: .dockerignore  Dockerfile  Makefile  pyproject.toml
my-service/my_service/: dependencies.py  main.py
my-service/my_service/api/v1/routers/: argocd_querier_router.py
my-service/my_service/clients/: argocd_client.py
my-service/my_service/config/: config.py
my-service/my_service/models/: models.py
my-service/my_service/utils/: logger.py  utils.py
my-service/tests/: test_argocd_client.py  test_routes.py
