[tool.poetry]
name = "my-service"
version = "0.1.0"
description = ""
authors = ["shahafido <shahaf@fidocredit.com>", "mk-armah <mikeyarmah@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.108.0"
pydantic = "^2.5.3"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pydantic-settings = "^2.1.0"
loguru = "^0.7.2"
aiohttp = "^3.11.11"
asyncio = "^3.4.3"
requests = "^2.32.3"
jwt = "^1.3.1"
cachetools = "^5.5.1"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.9.7"
mypy = "^1.15.0"
pytest = "^8.3.4"
httpx = "0.23.0"
pytest-cov = "^6.0.0"
aioresponses = "^0.7.8"
pytest-asyncio = "^0.25.3"
types-cachetools = "^5.5.0.20240820"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
markers = [
    "asyncio: mark test functions as asyncio tests.",
]
filterwarnings = [
    "ignore:.*'cgi' is deprecated.*:DeprecationWarning",
    "ignore::DeprecationWarning:httpx/_models.py",
    "ignore:verify_ssl is deprecated:DeprecationWarning",
]
